# Nathans-Tarkov-Radar-Public

./: README.md
client/: CMakeLists.txt
client/renderers/: CMakeLists.txt
client/renderers/EGLTarkov/: CMakeLists.txt  egl.c  espobject.c  espobject.h  tarkovread.cpp  tarkovread.h
client/renderers/EGLTarkov-shadertest/: egl.c  espobject.c  espobject.h  tarkovread.cpp  tarkovread.h
client/renderers/EGLTarkov-shadertest/shader/: espobject.vert
client/renderers/EGLTarkov/shader/: espobject.vert
repos/tarkov/: Includes.h
repos/tarkov/GameSpecific/Tarkov/: Tarkov.h  TarkovGameWorld.h  TarkovHandsController.h  TarkovLootItem.h  TarkovPlayer.h  TarkovPlayerBody.h
repos/tarkov/GameTypes/Unity/: GameObject.h  GameObjectManager.h  UnityEngineString.h
repos/vmread/: meson.build
